# CW4_parsing_of_vacancies

./: .gitignore  README.md  bot.py  main.py  pyproject.toml
data/areas/: headhunter_areas.json  superjob_areas.json
data/research/: vacancies.xlsx
src/: class_mylist.py  class_save_csv.py  class_save_json.py  class_userinput.py  class_vacancy.py  classes.py  classes_api.py  telegram_bot.py  utils.py
